<resources>
    <string name="app_name">Electro kid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainText">\tПредставьте, вы с ребенком собрались просмотреть мультфильм или познавательную передачу, улеглись на диван и вдруг ваше чадо спрашивает: «А от чего работает телевизор/телефон/планшет?» Вроде бы ответ простой — от электричества, но не нужно быть Нострадамусом, чтобы предугадать следующий вопрос, который поступит от ребенка: «А откуда берется электричество?» И здесь у многих родителей наступает ступор, в особенности у тех, кто не заканчивал физмат, и их профессия никоим образом не связана с этим направлением.\n \n \tКонечно, можно ответить так же просто, как и на предыдущий вопрос: «Электричество берется из розетки». Но чтобы ваш ребенок получил полный и раскрытый ответ, причем доступным и понятным языком, без заумных формул и определений, которыми написана большая часть учебников по физике, я предлагаю задержаться на этой странице и прочитать, возможно, не новую, но полезную и познавательную информацию.</string>
    <string name="_1">Что такое электричество?</string>
    <string name="_2">Электрический ток</string>
    <string name="_3">Откуда берется электричество?</string>
    <string name="_4">История</string>
    <string name="_5">Как электрический ток поступает в дома?</string>
    <string name="_6">Как ток заставляет работать электроприборы?</string>
    <string name="_7">Не только друг, но и враг!</string>
    <string name="_8">Правила безопасного обращения с электричеством для детей</string>
    <string name="header">Детям про электричество</string>
    <string name="todo">TODO</string>
    <string name="_0">Детям про электричество</string>
</resources>