<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#C5B003">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="12dp"
        android:layout_weight="7"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    app:cardCornerRadius="12dp"
                    app:cardUseCompatPadding="true"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="6dp"
                    tools:layout_editor_absoluteY="10dp">
                    <ImageView
                        android:id="@+id/img_header"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/lampochki"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_header"
                    style="@style/headerTv"
                    android:text="@string/header"/>

                <TextView
                    android:id="@+id/tv_main_text"
                    style="@style/simpleTv"
                    android:text="@string/mainText"/>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/btn_0"
                    android:layout_marginTop="4dp"
                    style="@style/listStyleTv"
                    android:text="@string/_0"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    android:id="@+id/btn_1"
                    android:layout_marginTop="4dp"
                    style="@style/listStyleTv"
                    android:text="@string/_1"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    style="@style/listStyleTv"
                    android:id="@+id/btn_2"
                    android:text="@string/_2"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    style="@style/listStyleTv"
                    android:id="@+id/btn_3"
                    android:text="@string/_3"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    style="@style/listStyleTv"
                    android:id="@+id/btn_4"
                    android:text="@string/_4"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    android:id="@+id/btn_5"
                    style="@style/listStyleTv"
                    android:text="@string/_5"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    android:id="@+id/btn_6"
                    android:text="@string/_6"
                    style="@style/listStyleTv"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    style="@style/listStyleTv"
                    android:id="@+id/btn_7"
                    android:text="@string/_7"
                    app:drawableStartCompat="@drawable/molniya" />

                <TextView
                    android:id="@+id/btn_8"
                    style="@style/listStyleTv"
                    android:text="@string/_8"
                    app:drawableStartCompat="@drawable/molniya" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>